src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LInks to the campaign created by the Opportunity going into a Closed Won stage.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommissionAmount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateInstalled__c</fullName>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>ServiceDate + (NumberOfMonths__c * 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InventoryStartDate__c</fullName>
        <formula>IF(NOT(ISNULL(Campaign__c)),  Campaign__r.StartDate, ServiceDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthlyAmount__c</fullName>
        <formula>Quantity * UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberConfirmed__c</fullName>
        <label># Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberInstalled__c</fullName>
        <label># Installed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonths__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id, PricebookEntry.Product2.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductStage__c</fullName>
        <label>Product Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Unscheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending IT Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Competitor Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Line Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled - Competitor Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Install Plays Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Install No Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Install DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Repair - No Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Repair - Playing Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Site - Pending Repair/Awaiting Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Delayed Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Delayed Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retracted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetractedDetails__c</fullName>
        <label>Retracted Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>NumberOfMonths__c *  Quantity *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Date_Installed</fullName>
        <active>true</active>
        <description>&quot;Date Installed&quot; on Opportunity Product cannot be filled in without a value in &quot;# Installed&quot;</description>
        <errorConditionFormula>AND(
ISNULL(NumberInstalled__c),
NOT(ISNULL(DateInstalled__c))
)</errorConditionFormula>
        <errorDisplayField>DateInstalled__c</errorDisplayField>
        <errorMessage>Date Installed cannot be entered without # Installed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Installed</fullName>
        <active>true</active>
        <description>&quot;# Installed&quot; must be greater than zero - &quot;# Installed&quot; can be blank or greater than zero</description>
        <errorConditionFormula>NumberInstalled__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>NumberInstalled__c</errorDisplayField>
        <errorMessage># Installed must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retracted_Details</fullName>
        <active>true</active>
        <description>Requires Retracted Details to be filled out when the product stage is set to &quot;Retracted&quot;.</description>
        <errorConditionFormula>AND(ISPICKVAL(ProductStage__c, &quot;Retracted&quot;),
ISBLANK(RetractedDetails__c))</errorConditionFormula>
        <errorDisplayField>RetractedDetails__c</errorDisplayField>
        <errorMessage>You must fill out the Retracted Details when the Product Stage is set to &quot;Retracted&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Quantities</fullName>
        <active>true</active>
        <description>User with a Healthcare Sales role or Member Services role cannot update Product Quantities on Opportunities with StageName = Closed Won</description>
        <errorConditionFormula>AND(  
ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
ISCHANGED(Quantity), 
OR(
$Profile.Name = &quot;Healthcare Sales&quot;,
$Profile.Name = &quot;Healthcare Sales Lead&quot;,
$Profile.Name = &quot;Member Services&quot;, 
$Profile.Name = &quot;Member Services Lead&quot;)
)</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Cannot update Quantity because Opportunity stage is Closed Won</errorMessage>
    </validationRules>
</CustomObject>